[tool.poetry]
name = "alfort-dom"
version = "0.0.0"
description = "A simple Elm like web application framework"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ar90n/alfort-dom"
readme = "README.md"
keywords = ["declarative-ui", "elm-architecture"]
include = ["alfort_dom/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
alfort = "^0.1.9"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.29.0"
pyright = "^1.1.238"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.0"
pytest-black = "^0.3.12"
pre-commit = "^3.0.0"
isort = "^5.10.1"
commitizen = "^3.0.1"
ruff = "^0.0.270"
docformatter = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"

[tool.pyright]
include = ["alfort_dom", "docs/examples", "tests"]
stubPath ="stubs"
typeCheckingMode = "strict"
reportMissingImports = false
reportMissingTypeStubs = false
reportMissingModuleSource = false
pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]
addopts = "--strict --durations=0 --color=yes"
testpaths = [
    "tests"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks]
test = "pytest"
check = { shell = "pre-commit run -a && pyright" }
build-example = { shell = "poetry build && mv dist/*.whl docs/examples/dist/" }
run-example = {shell = "poe build-example && python -m http.server --directory docs/examples 9898"}
install-pre-commit = "pre-commit install"
